# views.py
@@ -10,6 +10,25 @@ from utils import auth_required, JSONEncoder
 routes = web.RouteTableDef()
 
 
+def get_entity_parent_pipeline(entity_id: ObjectId):
+    return [
+        {
+            "$graphLookup": {
+                "from": "entity",
+                "startWith": "$_id",
+                "connectFromField": "parent_id",
+                "connectToField": "_id",
+                "as": "parents"
+            }
+        },
+        {
+            "$match": {
+                "_id": entity_id
+            }
+        }
+    ]
+
+
 @routes.post('/api/auth')
 async def auth(request):
     data = await request.json()
@@ -28,21 +47,19 @@ async def auth(request):
     return web.json_response()
 
 
-
 @routes.post('/api/entity/insert')
 @auth_required
 async def insert(request):
     entity = await request.json()
+    parent_id = entity.get('parent_id')
+    if parent_id:
+        parent_id = ObjectId(parent_id)
+        entity['parent_id'] = parent_id
 
     db = request.app['db']
-    result = await db.entity.replace_one(
-        {"name": entity.get("name")},
-        entity,
-        upsert=True
-    )
+    await db.entity.insert_one(entity)
 
-    return web.json_response()
-
+    return web.json_response(text=JSONEncoder().encode(entity))
 
 
 @routes.post('/api/entity/find')
@@ -50,7 +67,6 @@ async def insert(request):
 async def find(request):
     data = await request.json()
     db = request.app['db']
-    await db.entity.create_index([("text", pymongo.TEXT)])
 
     entities = db.entity.find({
         "$text": {
@@ -60,27 +76,13 @@ async def find(request):
 
     result = []
     async for entity in entities:
-        pipeline = [
-            {
-                "$graphLookup": {
-                    "from": "entity",
-                    "startWith": "$name",
-                    "connectFromField": "parent_name",
-                    "connectToField": "name",
-                    "as": "parents"
-                }
-            },
-            {
-                "$match": {
-                    "name": entity.get('name')
-                }
-            }
-        ]
-        async for doc in db.entity.aggregate(pipeline):
-            result.append(doc)
+        result = []
+        async for doc in db.entity.aggregate(get_entity_parent_pipeline(entity.get('_id'))):
+            parents = doc.get('parents')
+            for parent in parents:
+                result.append(parent.get('_id'))
 
     return web.json_response(text=JSONEncoder().encode(result))
-
 
 
 @routes.get('/api/entity/{id}/subtree')
@@ -89,24 +91,10 @@ async def subtree(request):
     id = request.match_info.get('id')
     db = request.app['db']
 
-    entity = await db.entity.find_one({"_id": ObjectId(id)})
-    pipeline = [
-        {
-            "$graphLookup": {
-                "from": "entity",
-                "startWith": "$name",
-                "connectFromField": "parent_name",
-                "connectToField": "name",
-                "as": "parents"
-            }
-        },
-        {
-            "$match": {
-                "name": entity.get('name')
-            }
-        }
-    ]
     result = []
-    async for doc in db.entity.aggregate(pipeline):
-        result.append(doc)
+    async for doc in db.entity.aggregate(get_entity_parent_pipeline(ObjectId(id))):
+        parents = doc.get('parents')
+        for parent in parents:
+            result.append(parent.get('_id'))
+
     return web.json_response(text=JSONEncoder().encode(result))
